@@ -1,5 +1,7 @@
 package it.unibo.cardhub.model.domain.impl;
 
+import java.util.List;
+import java.util.Objects;
 import java.util.Optional;
 
 import it.unibo.cardhub.model.domain.api.Card;
@@ -14,16 +16,18 @@ public class DiscardPileImpl extends AbstractCardCollection implements DiscardPi
 
     /**
      * Discard pile constructor.
+     * 
+     * @param cards discard pile cards
      */
-    public DiscardPileImpl() {
-        super();
+    public DiscardPileImpl(final List<? extends Card<?>> cards) {
+        super(Objects.requireNonNull(cards));
     }
 
     /**
      * {@inheritDoc}
      */
     @Override
-    public Card takeCard(final Card card) {
+    public Card<?> takeCard(final Card<?> card) {
         if (!this.getMutableCards().remove(card)) {
             throw new NoSuchCardsException();
         }
@@ -35,12 +39,12 @@ public class DiscardPileImpl extends AbstractCardCollection implements DiscardPi
      * {@inheritDoc}
      */
     @Override
-    public Optional<Card> peekCard() {
+    public Optional<Card<?>> peekCard() {
         if (getMutableCards().isEmpty()) {
             return Optional.empty();
         }
 
-        return Optional.of(getMutableCards().get(this.size() - 1));
+        return Optional.of(getMutableCards().getLast());
     }
 
     /**
@@ -48,8 +52,16 @@ public class DiscardPileImpl extends AbstractCardCollection implements DiscardPi
      */
     @Override
     public void reshuffleIntoDeck(final Deck deck) {
-        deck.addCards(this.getMutableCards());
+        this.getMutableCards().forEach(deck::addCard);
         this.getMutableCards().clear();
         deck.shuffle();
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
+    public void addCard(final Card<?> card) {
+        this.getMutableCards().add(card);
     }
 }
